--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       h1 {font-size:300%; color:#E3C8B1; background-color: #6D1033; font-family: Impact, 'Arial Narrow Bold', sans-serif }
      
       p{font-size: 1.75rem; font-weight: bold}
-      span {color:black; background-color: #ae0d4868; font-size: 1.5rem;}
+      span {font-size: 1.5rem; color:black; background-color: #ae0d4868}
 
       .nav-link {
         background-color: #6D1033;
