--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     
                     <div class="col-sm-12 col-md-5 col-lg-5 d-flex flex-wrap flex-fill align-content-center">
                         <h1 class="mt-3 flex-fill rounded-4">José Luis Rodríguez Avila</h1>
-                        <p>Soy un entusiasta profesional en administración de empresas y proyectos, en formacion como desarrollador web full-stack.</p>
+                        <p>Soy un entusiasta profesional en administración de empresas y proyectos, en formación como desarrollador web full-stack.</p>
                         <p>Me apasiona enfrentar desafíos buscando soluciones innovadoras, para las cuales combino habilidades de liderazgo y técnicas de gerencia estratégica para lograr resultados excepcionales.</p>
                         <p>Con más de 10 años de experiencia coordinando proyectos para consorcios multinacionales y organismos internacionales como el Banco Mundial y el Banco Interamericano de Desarrollo, tengo un gran entendimiento de las diversas necesidades de los clientes y la capacidad de brindar soluciones efectivas. Mi formación actual como desarrollador web full-stack, especializado en Python y React, me permite ofrecer soluciones digitales integrales y adaptadas a medida.</p>
                         <p>Fuera del ámbito profesional, encuentro equilibrio e inspiración haciendo actividades al aire libre, asistiendo a recitales y disfrutando de buenos momentos con amigos alrededor de una copa de vino. Mi mayor motivación es ayudar a otros a alcanzar el éxito, ya sea a través de estrategias empresariales sólidas o creando experiencias digitales cautivadoras. ¡Unámonos y logremos el éxito que te mereces!</p>
